--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ songbird = { version= "0.4.3", features = ["builtin-queue"] }
 symphonia = { version= "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
 url = "2.5.2"
 reqwest = "0.11.27"
+tracing = "0.1"
+tracing-subscriber = "0.3"
